[UDP] Adventure Travel App

--- a/ui_study/pubspec.yaml
+++ b/ui_study/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.5
   bruno: ^3.3.0
   flutter_svg: ^2.0.1
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
