[UDP] Course Learning App

--- a/ui_study/pubspec.yaml
+++ b/ui_study/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   get: ^4.6.5
   bruno: ^3.3.0
   flutter_svg: ^2.0.1
   flutter_staggered_grid_view: ^0.6.2
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
