--- a/ui_study/pubspec.yaml
+++ b/ui_study/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^2.0.1
   flutter_staggered_grid_view: ^0.6.2
   percent_indicator: ^4.2.2
+  mock_data: ^2.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
