--- a/ui_study/pubspec.yaml
+++ b/ui_study/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   mock_data: ^2.0.0
   intl: ^0.17.0
   dotted_border: ^2.0.0+3
+  table_calendar: ^3.0.8
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
